--- a/02-bases/package.json
+++ b/02-bases/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "start:dev": "echo 'Hola mundo desde start:dev'",
-    "start:prod": "echo 'Hola mundo desde start:prod'",
-    "fabio": "echo 'Hola mundo desde Fabio'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/app.js"
   },
   "author": "Fabio Escobar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.3"
+  }
 }
