--- a/02-bases/package.json
+++ b/02-bases/package.json
@@ -10,7 +10,9 @@
   "author": "Fabio Escobar",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "axios": "^1.7.2",
