--- a/02-bases/package.json
+++ b/02-bases/package.json
@@ -5,12 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon",
+    "build": "rimraf ./dist && tsc",
+    "prod": "npm run build && node dist/app.js"
   },
   "author": "Fabio Escobar",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.14.2",
+    "@types/uuid": "^9.0.8",
     "nodemon": "^3.1.3",
+    "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
